fixing some layout issues

--- a/auricroad/static_source/sass/components/_site_logo_card_blocks.scss
+++ b/auricroad/static_source/sass/components/_site_logo_card_blocks.scss
@@ -7,7 +7,6 @@
 
   justify-content: center;
   margin-bottom: 50px;
-  flex-flow: row;
 
   @include breakpoint(tablet) {
     @include xy-cell(10);
